# kyco

./: .gitignore  Cargo.toml  LICENSE  README.md  eigenvalues_plot.m  matrix_determinant.m  plan.md  test_example.rs  todo.md  work.md
.claude/: settings.json
.github/: FUNDING.yml
.github/workflows/: release.yml
.kyco/: config.toml
.kyco/profiles/: security-audit.yaml
assets/internal/: defaults.toml
bridge/: kyco-sessions.json-shm  kyco-sessions.json-wal  kyco-sessions.json.bak-1765991781394  package-lock.json  package.json
bridge/src/: claude.ts  codex.ts  config.ts  events.ts  schemas.ts  server.ts  store-helpers.ts  store.ts  types.ts
bridge/src/claude/: approvals.ts  can-use-tool.ts  helpers.ts  index.ts  options-builder.ts  query.ts  types.ts
bridge/src/codex/: events.ts  instance.ts  query-with-schema.ts  types.ts  utils.ts
bridge/src/manual-tests/: claude-subagents.ts
bridge/src/policy/: bugbounty.ts
bridge/src/routes/: claude.ts  codex.ts  index.ts  sessions.ts
docs/: bugbounty_notes.md  claudeCodeSdk.md  codexSdk.md  codexcli.md  geminicli.md  publishRelease.md
docs/claudeCodeSamples/: agents.md  berechtigung.md  plugins.md  sitzungsverwaltung.md  streaming.md  subagents.md
docs/codexSamples/: helpers.md  structuredoutput.md  structuredoutputzod.md
jetbrains-plugin/: README.md  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
notes/findings/: POTENTIAL-006-worktree-fallback-lock-bypass.md  POTENTIAL-007-second-order-template-expansion-prompt-injection.md  VULN-001-unbounded-bridge-output-dos.md  VULN-002-unsafe-bridge-download-extract.md  VULN-003-unauthenticated-local-bridge-hijack.md  VULN-004-untrusted-cwd-bridge-rce.md  VULN-005-unknown-mode-agent-policy-bypass.md  VULN-005-worktree-git-allowlist-rce.md  VULN-006-codex-auto-approve-tool-use.md
scripts/: bump-version.sh
src/: commands.rs  lib.rs  main.rs
src/agent/: chain.rs  claude.rs  codex.rs  gemini.rs  mod.rs  output.rs  process_registry.rs  pty.rs  pty_session.rs  registry.rs  runner.rs  terminal.rs
src/agent/bridge/: adapter.rs  client.rs  mod.rs  types.rs
src/agent/chain/: mod.rs  prompt.rs  state.rs  types.rs
src/agent/claude/: adapter.rs  adapter_tests.rs  mod.rs  output.rs  tool_format.rs
src/agent/codex/: mod.rs  parser.rs
src/agent/gemini/: adapter.rs  mod.rs  parser.rs
src/agent/terminal/: adapter.rs  helpers.rs  mod.rs  session.rs
src/bugbounty/: context_injector.rs  db.rs  mod.rs  next_context.rs  notes.rs  repository.rs  scope_parser.rs
src/bugbounty/import/: memory_semgrep.rs  mod.rs  nuclei.rs  sarif.rs  semgrep.rs  snyk.rs
src/bugbounty/models/: artifact.rs  finding.rs  flow_edge.rs  job.rs  (+3 more)
src/cli/: agent.rs  chain.rs  finding.rs  import.rs  init.rs  job.rs  memory.rs  mod.rs  mode.rs  project.rs  run.rs  scan.rs  scope.rs  session.rs  skill.rs  status.rs
src/comment/: mod.rs  parser.rs
src/config/: agent.rs  alias.rs  chain.rs  internal.rs  io.rs  lookup.rs  mod.rs  mode.rs  scope.rs  settings.rs  skill.rs  skill_discovery.rs  skill_parser.rs  skill_registry.rs  target.rs  token.rs
src/domain/: agent.rs  agent_group.rs  comment.rs  job.rs  log_event.rs  mod.rs  scope.rs  target.rs
src/git/: manager.rs  mod.rs
src/gui/: agents.rs  animations.rs  app.rs  app_achievements.rs  app_diff.rs  app_eframe.rs  app_helpers.rs  app_input.rs  app_jobs.rs  app_new.rs  app_orchestrator.rs  app_popup.rs  app_render.rs  app_selection.rs  app_theme.rs  app_types.rs  app_update.rs  app_voice.rs  detail_panel.rs  diff.rs  hotkey.rs  install.rs  jobs.rs  mod.rs  modes.rs  output_schema.rs  runner.rs  selection_popup.rs  settings.rs  status_bar.rs  theme.rs  toast.rs  update.rs  voice.rs  voice_install.rs  voice_settings.rs
src/job/: group_manager.rs  manager.rs  mod.rs
src/scanner/: mod.rs
src/stats/: db.rs  mod.rs  models.rs  queries.rs  recorder.rs  time_bucket.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/watcher/: mod.rs
src/workspace/: mod.rs  registry.rs
tests/: bridge_autostart_test.rs  chain_test.rs  claude_subagents_test.rs  git_apply_changes_test.rs  git_integration_test.rs  git_manager_new_test.rs  git_worktree_diff_test.rs
tests/chain_test/: chain_step.rs  config.rs  edge_cases.rs  gui_integration.rs  integration_bugs.rs  mod.rs  mode_chain.rs  serialization.rs  state_transitions.rs
tests/common/: mod.rs
vscode-extension/: README.md  esbuild.config.js  package-lock.json  package.json  setup.sh  test-endpoint.sh  tsconfig.json
vscode-extension/src/: commands.ts  config.ts  extension.ts  git.ts  http.ts  lsp.ts  search.ts  tests.ts  types.ts  utils.ts
(+287 files in other folders)
