[package]
name = "kyco"
version = "0.1.0"
edition = "2024"
description = "Know Your Codebase - AI-powered code tasks with transparency"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.29"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Regex for comment parsing
regex = "1"

# File system utilities
walkdir = "2"
ignore = "0.4"
globset = "0.4"
notify = "8"
notify-debouncer-mini = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# PTY for interactive agent sessions
portable-pty = "0.9"

# Lazy static initialization
once_cell = "1.19"

[dev-dependencies]
tempfile = "3"
