[package]
name = "kyco"
version = "0.4.0"
edition = "2024"
description = "Know Your Codebase - AI-powered code tasks with transparency"
license = "MIT"

[[bin]]
name = "kyco"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# GUI
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"
global-hotkey = "0.6"
arboard = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Regex for comment parsing
regex = "1"

# File system utilities
walkdir = "2"
ignore = "0.4"
globset = "0.4"
notify = "8"
notify-debouncer-mini = "0.7"
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Voice Activity Detection
voice_activity_detector = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# PTY for interactive agent sessions
portable-pty = "0.9"

# Lazy static initialization
once_cell = "1.19"

# HTTP server for extension communication
tiny_http = "0.12"

# HTTP client for update checks
ureq = "2"

# Semantic versioning for update comparison
semver = "1"

# macOS Accessibility API
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"

# Windows UI Automation
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Accessibility", "Win32_Foundation", "Win32_System_Com"] }

[dev-dependencies]
tempfile = "3"
