[package]
name = "kyco"
version = "0.9.5"
edition = "2024"
description = "Know Your Codebase - AI-powered code tasks with transparency"
license = "CC-BY-NC-ND-4.0"

[[bin]]
name = "kyco"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# GUI
eframe = "0.32"
egui = "0.32"
egui_extras = "0.32"
global-hotkey = "0.6"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# File system utilities
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Voice Activity Detection
voice_activity_detector = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# PTY for interactive agent sessions
portable-pty = "0.9"

# Lazy static initialization
once_cell = "1.19"
getrandom = "0.2"

# HTTP server for extension communication
tiny_http = "0.12"

# HTTP client for update checks and SDK bridge
ureq = { version = "2", features = ["json"] }

# Semantic versioning for update comparison
semver = "1"
egui_commonmark = "0.21.1"
regex = "1.12.2"

# Unix (macOS/Linux) system calls for permission checks
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# macOS Accessibility API
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"

# Windows UI Automation
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Accessibility", "Win32_Foundation", "Win32_System_Com"] }

[dev-dependencies]
tempfile = "3"
